Update readme with Round 2 results